added premier section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </header>
     <main class="main">
-      <img class="sportmans" src="./img/main.png" alt="">
+      <img class="sportmans" src="./img/main.png" alt="" />
       <div class="container">
         <div class="main__text">
           <span class="main__conviction"
@@ -51,5 +51,66 @@
       </div>
       <img class="main__wave" src="./img/wave.svg" alt="" />
     </main>
+    <section class="premier">
+      <div class="container">
+        <h1 class="premier__title">Why Scholarbook <span>Premier</span></h1>
+        <div class="premier__cards">
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">Launched 5 years ago</h2>
+            <p class="premier__card-text">
+              Scholarbook Premier was created in 2019. Know more about our story
+            </p>
+            <div class="premier__href-wrapper">
+              <a href="" class="premier__a">About us</a>
+              <img src="./img/arrow.svg" alt="" class="pemier__img" />
+            </div>
+          </div>
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">
+              Over 300 athletes placed in partner U.S. programs
+            </h2>
+            <p class="premier__card-text">And much more ahead</p>
+          </div>
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">
+              # of points scored at Conference championships 2024
+            </h2>
+            <p class="premier__card-text">
+              By our athletes in partner schools indoor and outdoor
+            </p>
+          </div>
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">Limited competition</h2>
+            <p class="premier__card-text">
+              Our Premier athletes are only shown to our partners and never
+              available to hundreds of programs on the market
+            </p>
+          </div>
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">
+              Highly motivated and dedicated athletes to succeed
+            </h2>
+            <p class="premier__card-text">
+              International athletes know what they want and why they go
+              overseas
+            </p>
+          </div>
+          <div class="premier__card">
+            <img src="./img/fire.svg" alt="" class="premier__img" />
+            <h2 class="premier__card-title">
+              Cost-effective way to elevate your program
+            </h2>
+            <p class="premier__card-text">
+              Our service costs as one average international recruiting trip
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
