--- a/index.html
+++ b/index.html
@@ -112,5 +112,48 @@
         </div>
       </div>
     </section>
+    <section class="recruit">
+      <div class="container recruit__container">
+        <h1 class="recruit__title">Recruit international athletes now!</h1>
+        <p class="recruit__text">
+          At Scholarbook, we don’t have clients, we have partners.  We believe
+          in a collaborative and supportive approach to the recruitment process
+          that results in programs finding the right student-athletes
+        </p>
+        <a href="" class="recruit__btn">Recruit now!</a>
+      </div>
+    </section>
+    <section class="countries">
+      <div class="container countries__container">
+        <h1 class="countries__title">
+          Access to a global talent pool from <span>45+ countries</span>
+        </h1>
+        <p class="countries__text">
+          We have our agents in all these countries and provide direct contacts
+          with our athletes
+        </p>
+        <img src="./img/world.png" alt="" class="countries__img" />
+      </div>
+    </section>
+    <section class="service">
+      <div class="container service__container">
+        <div class="service__text">
+          <h1 class="service__title">
+            Customized packages that allow programs to recruit specific regions
+            and talent levels
+          </h1>
+          <a href="" class="service__a">Go to Service page</a>
+        </div>
+        <img src="./img/service__img.svg" alt="" class="service__img" />
+      </div>
+    </section>
+    <section class="ready">
+      <div class="container ready__container">
+        <h1 class="ready__title">
+          Ready to take your program to <span>new heights</span>?
+        </h1>
+        <a href="" class="ready__a">Contact us today!</a>
+      </div>
+    </section>
   </body>
 </html>
