--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://db.onlinewebfonts.com/c/406b56da0c31245c249b3a3c61560d1a?family=Joyride+W05+STD"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="./app.js" defer></script>
     <title>Scholarbook</title>
   </head>
   <body>
@@ -153,6 +154,97 @@
           Ready to take your program to <span>new heights</span>?
         </h1>
         <a href="" class="ready__a">Contact us today!</a>
+      </div>
+    </section>
+    <section class="questions">
+      <div class="container">
+        <div class="steps__descr">
+          <h2 class="questions__title">Frequently Asked Questions</h2>
+        </div>
+        <div class="questions__wrapper">
+          <div class="acordeon">
+            <div class="acordeon__item">
+              <div class="acordeon__wrapper">
+                <h2 class="acordeon__title">
+                  With what school level are you working?
+                </h2>
+                <img
+                  src="./img/acordeon-arrow.svg"
+                  alt=""
+                  class="acordeon__img"
+                />
+              </div>
+              <p class="acordeon__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+                rerum sunt unde magnam iure natus cum necessitatibus quaerat at
+                porro. Fugiat at explicabo cupiditate minus! Ex pariatur ut
+                voluptate iste.
+              </p>
+            </div>
+          </div>
+          <div class="acordeon">
+            <div class="acordeon__item">
+              <div class="acordeon__wrapper">
+                <h2 class="acordeon__title">
+                  How many athletes can I expect to recruit?
+                </h2>
+                <img
+                  src="./img/acordeon-arrow.svg"
+                  alt=""
+                  class="acordeon__img"
+                />
+              </div>
+              <p class="acordeon__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+                rerum sunt unde magnam iure natus cum necessitatibus quaerat at
+                porro. Fugiat at explicabo cupiditate minus! Ex pariatur ut
+                voluptate iste.
+              </p>
+            </div>
+          </div>
+          <div class="acordeon">
+            <div class="acordeon__item">
+              <div class="acordeon__wrapper">
+                <h2 class="acordeon__title">
+                  What is the difference between the All-Conference and
+                  All-American tier?
+                </h2>
+                <img
+                  src="./img/acordeon-arrow.svg"
+                  alt=""
+                  class="acordeon__img"
+                />
+              </div>
+              <p class="acordeon__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+                rerum sunt unde magnam iure natus cum necessitatibus quaerat at
+                porro. Fugiat at explicabo cupiditate minus! Ex pariatur ut
+                voluptate iste.
+              </p>
+            </div>
+          </div>
+          <div class="acordeon">
+            <div class="acordeon__item">
+              <div class="acordeon__wrapper">
+                <h2 class="acordeon__title">
+                  Will I have access to All-Conference level athletes with
+                  All-American tier?
+                </h2>
+                <img
+                  src="./img/acordeon-arrow.svg"
+                  alt=""
+                  class="acordeon__img"
+                />
+              </div>
+              <p class="acordeon__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+                rerum sunt unde magnam iure natus cum necessitatibus quaerat at
+                porro. Fugiat at explicabo cupiditate minus! Ex pariatur ut
+                voluptate iste.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
