--- a/index.html
+++ b/index.html
@@ -23,18 +23,30 @@
       <div class="container header__container">
         <img class="logo" src="./img/logo.svg" alt="logo" />
         <ul class="header__list list-reset">
-          <li class="header__list-item">About us</li>
-          <li class="header__list-item">Service</li>
-          <li class="header__list-item">Case studies</li>
-          <li class="header__list-item">For athletes</li>
-          <li class="header__list-item">Blog</li>
-          <li class="header__list-item">Contact Us</li>
+          <li class="header__list-item">
+            <a href="./html/about.html" class="header__link">About us</a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__link">Service</a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__link">Case studies</a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__link">For athletes</a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__link">Blog</a>
+          </li>
+          <li class="header__list-item">
+            <a href="" class="header__link">Contact Us</a>
+          </li>
         </ul>
       </div>
     </header>
     <main class="main">
       <div class="container">
-        <img class="sportmans" src="./img/main.png" alt="" />
+        <img class="sportmans about__sportsman" src="./img/main.png" alt="" />
         <div class="main__text">
           <span class="main__conviction"
             >The only international recruiting service you’ll ever need</span
@@ -253,12 +265,24 @@
           <div class="footer__top-wrapper">
             <img class="logo" src="./img/logo.svg" alt="logo" />
             <ul class="footer__list header__list list-reset">
-              <li class="footer__list-item header__list-item">About us</li>
-              <li class="footer__list-item header__list-item">Service</li>
-              <li class="footer__list-item header__list-item">Case studies</li>
-              <li class="footer__list-item header__list-item">For athletes</li>
-              <li class="footer__list-item header__list-item">Blog</li>
-              <li class="footer__list-item header__list-item">Contact Us</li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">About us</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Service</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Case studies</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">For athletes</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Blog</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Contact Us</a>
+              </li>
             </ul>
           </div>
           <p class="footer__disclaimer">
