--- a/about/about.html
+++ b/about/about.html
@@ -245,6 +245,92 @@
         </div>
       </div>
     </section>
+    <section class="partners">
+      <div class="container partners__container">
+        <h3 class="partners__values">Our values</h3>
+        <h1 class="partners__title">
+          At Scholarbook, we don’t have clients, <span>we have partners</span>
+        </h1>
+        <p class="partners__text1">
+          We believe in a collaborative and supportive approach to the
+          recruitment process that results in programs finding the right
+          student-athletes.
+        </p>
+        <p class="partners__text2">
+          Through communication and transparency, we pride ourselves in taking
+          the guesswork out of international recruiting
+        </p>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__top">
+          <div class="footer__top-wrapper">
+            <img class="logo" src="../img/logo.svg" alt="logo" />
+            <ul class="footer__list header__list list-reset">
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">About us</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Service</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Case studies</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">For athletes</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Blog</a>
+              </li>
+              <li class="footer__list-item header__list-item">
+                <a href="" class="footer__link">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <p class="footer__disclaimer">
+            <span>Disclaimer: </span>Scholarbook, through its Scholarbook
+            Premier program, adheres strictly to NCAA regulations to ensure a
+            fair and compliant recruitment process. Our recruitment service is
+            available to all institutions wishing to subscribe at uniform rates
+            and conditions, without discrimination or exclusivity. We provide
+            detailed, individual analyses of each athlete, ensuring that all
+            subscribers receive the same standardized information, which is
+            updated and distributed at least four times per calendar year.
+          </p>
+          <p class="footer__compliance">
+            <span>NCAA Compliance: </span>As a fully compliant NCAA recruiting
+            service, Scholarbook does not offer preferential information or
+            services to any subscribing institution. All prospective
+            student-athletes are presented in a consistent, standardized format
+            that is equally accessible to all subscribers. Our comprehensive
+            service includes handling NCAA eligibility paperwork, visa
+            applications, standardized tests, and more, ensuring that athletes
+            from less privileged backgrounds, particularly from Africa, have the
+            opportunity to compete in NCAA sports. These services are financed
+            through the subscriptions of our partner schools, allowing us to
+            maintain our commitment to equality and accessibility in collegiate
+            athletics.
+          </p>
+        </div>
+        <div class="footer__bottom">
+          <span class="footer__bottom-text"
+            >For additional details about our services and NCAA compliance,
+            please contact us at</span
+          >
+          <span class="footer__bottom-email">futurechamps@scholarbook.net</span>
+        </div>
+      </div>
+    </footer>
+    <section class="footer__premier">
+      <div class="container footer__premier-wrapper">
+        <span class="footer__premier">© Scholarbook Premier 2024</span>
+        <div class="footer__link-wrapper">
+          <a href="" class="footer__a">Privacy Policy</a>
+          <a href="" class="footer__a">Terms of Use</a>
+        </div>
+      </div>
+    </section>
     <div class="modal">
       <div class="modal__overlay">
         <div class="modal__dialog">
