--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="logo" src="./img/logo.svg" alt="logo" />
         <ul class="header__list list-reset">
           <li class="header__list-item">
-            <a href="./html/about.html" class="header__link">About us</a>
+            <a href="./about/about.html" class="header__link">About us</a>
           </li>
           <li class="header__list-item">
             <a href="" class="header__link">Service</a>
@@ -266,7 +266,7 @@
             <img class="logo" src="./img/logo.svg" alt="logo" />
             <ul class="footer__list header__list list-reset">
               <li class="footer__list-item header__list-item">
-                <a href="" class="footer__link">About us</a>
+                <a href="./about/about.html" class="footer__link">About us</a>
               </li>
               <li class="footer__list-item header__list-item">
                 <a href="" class="footer__link">Service</a>
